Alteraçóes no Index

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
         
             </section>
         </section>
+
+        <section class="containerValores">
+            <h1 class="centroValores">Quais são os beneficios?<hr><br></h1>
+            <section class="blocosValores">
+                <h5 class="centroValores"> <img src="imagens/apoio-suporte.png" alt="Entrar em Ação" width="100" height="100"> Entrar em ação e fazer a diferença</h5>
+                <h5 class="centroValores"> Descobrir novas culturas e <br> promover a compreensão internacional</h5>
+                <h5 class="centroValores"> Desenvolver habilidades de liderança</h5>
+                <h5 class="centroValores"> Fazer amizades pelo mundo e se divertir</h5>
+
+            </section>
+        </section>
         
     </main>
 
