Criando o Bloco de Valores

--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
             <section class="texto_apresentacao"> 
                 <h1 class="texto_titulo"> CONHEÇA O <span class="destaque_1">INTERACT INTEGRAÇÃO!</span> </h1>
 
-                <!-- <p class="paragrafo">Olá, somos o Interact Integração e nossa missão é <span class="destaque_1"> ajudar e trazer felicidade para as pessoas</span>, venha nos conhecer! <br><br> O Interact une jovens de 12 a 18 anos para desenvolverem suas habilidades de liderança e descobrirem a força do lema <span class="destaque_1"> “Dar de Si Antes de Pensar em Si”.</span>-->
-
                 <p class="paragrafo">O Interact <span class="destaque_1"> é mais do que um simples clube.</span> Somos uma comunidade de jovens, com idades entre 12 e 18 anos, unidos por um objetivo comum: <span class="destaque_1"> tornar o mundo um lugar melhor.</span><br><br> Através de nossos projetos e atividades, buscamos promover a <span class="destaque_1"> compreensão mútua, a paz, o serviço à comunidade e o descobrimento do lema “Dar de Si Antes de Pensar em Si”!</span>
 
                 </p>
@@ -65,12 +63,12 @@
         </section>
 
         <section class="containerValores">
-            <h1 class="centroValores">Quais são os beneficios?<hr><br></h1>
+            <h1 class="centroValoresTitulo">Quais são os beneficios?<hr><br></h1>
             <section class="blocosValores">
-                <h5 class="centroValores"> <img src="imagens/apoio-suporte.png" alt="Entrar em Ação" width="100" height="100"> Entrar em ação e fazer a diferença</h5>
-                <h5 class="centroValores"> Descobrir novas culturas e <br> promover a compreensão internacional</h5>
-                <h5 class="centroValores"> Desenvolver habilidades de liderança</h5>
-                <h5 class="centroValores"> Fazer amizades pelo mundo e se divertir</h5>
+                <h5 class="centroValores"> <img src="imagens/apoio-suporte.png" alt="Entrar em Ação" width="100" height="100"> Entrar em ação e fazer a diferença!</h5>
+                <h5 class="centroValores"> <img src="imagens/globo-terrestre.png" alt="Globo" width="100" height="100"> Descobrir novas culturas e promover a compreensão internacional!</h5>
+                <h5 class="centroValores"> <img src="imagens/lideranca.png" alt="Liderança" width="100" height="100"> Desenvolver habilidades de liderança!</h5>
+                <h5 class="centroValores"> <img src="imagens/toca-aqui.png" alt="Amizade" width="100" height="100"> Fazer amizades pelo mundo e se divertir!</h5>
 
             </section>
         </section>
