--- a/contatos.html
+++ b/contatos.html
@@ -20,7 +20,7 @@
     <header>
           <nav>
               
-          <img src="imagens/Cópia_de_Interact_semfundo.png" width="130" height="130">
+            <img class="imagemlogo" src="imagens/Interact Logo_PT21.png">
             
             <div class="botoes_nav">
                 <a class="botaonav" href="index.html">Home</a>
@@ -39,9 +39,10 @@
             <section class="texto_apresentacao"> 
                 <h1 class="texto_titulo2"> ENTRE EM CONTATO <span class="destaque_1">CONOSCO</span> </h1>
 
-                <p class="paragrafo2">E-mail: <span class="destaque_1"> interact.integracao@gmail.com </span></p>
-                <p class="paragrafo2">WhatsApp: <span class="destaque_1"> (17) 12345-6789 </span></p>
-                <p class="paragrafo2">Localização: <span class="destaque_1"> R. Gen. Glicério, 5328 - Centro </span></p>
+                <p class="paragrafo2">E-mail: <span class="destaque_1">  ic.integracao@gmail.com </span></p>
+                <p class="paragrafo2">WhatsApp: <span class="destaque_1"> (17) 98800-5092 </span></p>
+                <p class="paragrafo2">Instagram: <span class="destaque_1"> @icintegração </span></p>
+                <p class="paragrafo2">Localização: <span class="destaque_1"> R. João Bôsco de Camargo, 88 - Vila Maria, 15025-380 </span></p>
 
             </section>
         </section>
@@ -52,9 +53,9 @@
     <footer class="rodapepoucoconteudo">
 
         <div class="rodape1">
-            <img class="imagemlogo" src="imagens/interact_integracaoIcone.png" alt="interact_integracaoLogo" width="100px" height= "100px">
+            <img class="imagemfooter" src="imagens/interact_integracaoIcone.png" alt="interact_integracaoLogo" width="100px" height= "100px">
 
-            <p class="texto_rodape1">📍Distrito 4480, R. Gen. Glicério, 5328 - Centro <br>🌐São José do Rio Preto - SP <br> 🔅Imagine o Rotary</p>
+            <p class="texto_rodape1">📍 Distrito 4480, R. João Bôsco de Camargo, 88 <br> 🌐São José do Rio Preto - SP <br> 🔅 Imagine o Rotary</p>
         </div>
 
 
